split to build and run images
+ different run params
+ run under dedicated user with limited file system access
+ mount /plugins from external volume